fix: includes name variables to Cypher queries